sass/style.scss
@import "normalize-3.0.1";
@import "compass/css3/columns";
@import "compass/typography/lists/inline-list";

$link-colour: #c4953a;

html, body {
  margin: 0;
  padding: 0;
  font-family: Roboto, sans-serif;
  font-size: 18px;
  min-width: 320px;
}

body {
  background: #f5f5f5;

  &.home {
    background: #fff;
  }
}

pre, code {
  font-family: DejaVu Sans Mono, Menlo, Consolas, monospace;
  font-size: 12px;
  line-height: 135%;
}

pre {

  .kr, .nn, .nf {
    font-weight: bold;
  }

  .nf {
    color: #945277;
  }

  .mi, .s {
    color: $link-colour;
  }

  .nn {
    color: #445588;
  }

}

/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */

header {
  position: relative;
  background: #1d222d;
  color: #fff;
  height: 110px;

  h1 {
    position: absolute;
    top: 38px;
    left: 30px;
    width: 54px;
    height: 34px;
    overflow: hidden;
    text-indent: 100%;
    background: url(../img/logo.png);
    background-size: 54px 34px;
    margin: 0;
  }

  a {
    color: #fff;
    text-decoration: none;
    opacity: 0.6;
    font-weight: 300;
  }

  a:hover, a.active {
    opacity: 1;
  }

  nav {
    position: absolute;
    top: 47px;
    right: 30px;
    margin: 0;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 1px;

    h2 {
      font-size: 12px;
      font-weight: 300;
      cursor: pointer;
      margin: 0;
    }

    ul {
      display: none;
      list-style: none;
      margin: 0;
      padding: 0;
    }
  }
}

/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */

main {
  a[href] {
    color: $link-colour;
  }

  pre {
    background: #fff;
    padding: 20px;
  }

  .codeblock {
    background: #fff;
  }

  .codeblock pre {
    max-width: 600px;
    margin: auto;
  }

  code {
    display: inline-block;
    background: #fff;
    font-size: 13px;
    padding: 0px 6px;
  }
}

main section {
  padding: 50px 10px;
  overflow: hidden;

  > * {
    box-sizing: border-box;
  }

  > p, li {
    font-size: 16px;
    line-height: 150%;
    max-width: 600px;
  }

  > p {
    margin-left: 20px;
    margin-right: 20px;
  }

  > h2 {
    font-size: 28px;
    font-weight: 300;
    margin: 5px 20px 30px;
  }

  > h3 {
    text-transform: uppercase;
    font-size: 15px;
    letter-spacing: 3px;
    margin: 5px 20px 30px;
  }

  > ul {
    margin: 0px 20px 0;
  }
}

main section+section {
  padding: 0px 10px 50px;
}

.home main section+section {
  padding: 50px 10px;
}

/* ------------------------------------------------------------------------- */

main section.intro {
  margin: 30px 20px;

  h2 {
    font-weight: 300;
    font-size: 24px;
    margin: 0;
  }

  .link {
    border-top: 1px solid $link-colour;
    padding: 6px 0 6px 0;
    width: 200px;
    text-align: right;

    a {
      display: inline-block;
      color: $link-colour;
      font-size: 14px;
      font-weight: 700;
      text-decoration: none;
      text-transform: uppercase;
    }

    &.install {
      margin-top: 50px;
      display: none;

      a {
        background: url(../img/icon-install.png) no-repeat left;
        background-size: 17px 15px;
        padding-left: 27px;
      }
    }
  }

}

/* ------------------------------------------------------------------------- */

main section.features {
  background: #f5f5f5;

  ul {
    padding: 0;
    list-style: none;
    color: #4d4d4d;
    margin-top: -10px;

    li {
      font-size: 18px;
      margin-top: 14px;

      &:nth-child(n+5) {
        display: none;
      }

      &.moreless {
        display: list-item;
        color: $link-colour;
        cursor: pointer;
      }
    }

    &.expanded li:nth-child(n+5) {
      display: list-item;
    }
  }
}

/* ------------------------------------------------------------------------- */

main section.example {

  position: relative;

  pre {
    background: #f5f5f5;
    border-top: 1px solid #e5e5e5;
  }

  h4, p {
    font-size: 16px;
    margin-left: 20px;
    margin-right: 20px;
  }

  h4 {
    margin-top: 50px;
  }

  div.nav {
    display: none;

    margin: 0 20px;

    .prev {
      float: left;
    }
    .next {
      float: right;
    }

    a {
      text-transform: uppercase;
      text-decoration: none;
      font-size: 14px;
      font-weight: 800;

      &.next {
        padding-right: 12px;
        background: url(../img/icon-chevron.png) no-repeat right;
        background-size: 7px 10px;
      }

      &.prev {
        padding-left: 12px;
        background: url(../img/icon-chevron-left.png) no-repeat left;
        background-size: 7px 10px;
      }
      margin-bottom: 6px;
    }

    overflow: hidden;

  }
}

/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */

ul.cards {
  list-style: none;
  padding: 0;

  li {
    position: relative;
    float: left;
    box-sizing: border-box;
    width: 100%;
    margin: 0 15px 15px 0;
    padding: 20px;
    display: block;
    min-height: 320px;
    background: #fff;

    h3 {
      font-size: 28px;
      line-height: 125%;
      font-weight: 300;
      margin: 0;
    }

    > a {
      display: block;
      padding: 10px 0;
      text-transform: uppercase;
      font-size: 14px;
      text-align: right;
      font-weight: 700;
      color: $link-colour;
      text-decoration: none;
      border-top: 1px solid $link-colour;
      position: absolute;
      left: 20px;
      right: 20px;
      bottom: 20px;
    }
  }
}

/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */

footer {
  padding: 20px 30px 50px;
  overflow: hidden;

  nav {
    ul {
      text-transform: uppercase;
      font-size: 14px;
      list-style: none;
      margin: 0;
      padding: 0;
      float: left;

      a {
        color: $link-colour;
        text-decoration: none;
      }

      &.external {
        float: right;

        a {
          display: block;
          width: 25px;
          height: 25px;
          overflow: hidden;
          text-indent: 100%;
          background-repeat: no-repeat;
          background-size: 25px 25px;
        }

        .github a {
          background-image: url(../img/github.png);
        }

        .twitter a {
          background-image: url(../img/twitter.png);
        }
      }

      li {
        margin-top: 20px;
      }
    }
  }
}

/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */

@media (min-width: 525px) {

  header nav h2 {
    display: none;
  }

  header nav ul {
    display: block;
  }

  footer nav ul {
    float: right;
  }

  footer nav ul.external {
    float: left;
    margin-left: -25px;
  }

  nav ul li {
    /*font-size: 14px;*/
    margin: 0 0 0 25px;
    float: left;
  }

  main section.intro .link.install {
    display: inline-block;
  }

  main section.features ul li:nth-child(n+1) {
    display: block;
  }

  main section.features ul li.moreless {
    display: none;
  }

  main section.features ul {
    @include column-count(2);
  }

  main section.example {

    h4 {
      display: none;
    }

    > div.example {
      display: none;

      &.current {
        display: block;
      }
    }

    div.nav {
      display: block;
    }
  }

  ul.cards li {
    width: calc(50% - 15px)
  }

}

@media (min-width: 676px) {

  main section > p {
    margin-left: auto;
    margin-right: auto;
    max-width: 600px;
  }

}

@media (min-width: 700px) {

  main section.features ul {
    @include column-count(3);
  }

  ul.cards li {
    width: calc(33% - 15px);
  }

}

@media (min-width: 876px) {

  main section.intro {
    margin: 30px auto;
    max-width: 800px;
  }

  main section > h2,
  main section > h3,
  main section > ul,
  main section > pre,
  main section > div {
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
  }

  main section.example {
    h4, p, div.nav {
      margin-left: auto;
      margin-right: auto;
    }
  }

}

/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */
/* ------------------------------------------------------------------------- */

@media (max-width: 524px) {

  .show-nav header {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
  }

  .show-nav h2 {
    display: block !important;
  }

  .show-nav main {
    display: none;
  }

  .show-nav header h2 {
    position: absolute;
    right: 0px;
    top: 45px;
  }

  .show-nav header nav {
    position: absolute;
    left: 0px;
    top: 0px;
    padding: 30px;
  }

  .show-nav nav ul {
    display: block;
    font-size: 24px;
    font-weight: 300;
    text-transform: none;
    margin-top: 100px;
  }

  .show-nav nav ul li {
    margin-top: 20px;
  }

}

